# FastAPI_with_MongoDB

./: Dockerfile  README.md  pyproject.toml
