[tool.poetry]
name = "fastapi_with_mongodb"
version = "0.1.0"
description = "FastApi with MongoDB"
authors = ["yunwenchenn <yunwenchenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
fastapi = "0.70.0"
uvicorn = "0.15.0"
pymongo = "3.12.0"
requests = "2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
